# untitled-rustgame

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
assets/glTF/: Debug_Scene.gltf
assets/glTF/base model/: base_model.gltf
config/: debug.toml  general.toml
crates/stats_and_abilities_system/: Cargo.toml
crates/stats_and_abilities_system/examples/launch/: main.rs
crates/stats_and_abilities_system/src/: event_dispatcher.rs  events.rs  health.rs  lib.rs  queue.rs  ressource.rs  stats.rs
crates/stats_and_abilities_system/src/event_queue/: mod.rs
src/: actor.rs  config_management.rs  debug_ui.rs  game.rs  game_client.rs  gamer_server.rs  lib.rs  main.rs  player.rs  player_ui.rs  schedule.rs  status_event.rs
src/abilities/: mod.rs
src/actor/: enemy.rs  health.rs  mod.rs  player.rs  status.rs  target.rs
src/actor/npc/: ai.rs  mod.rs
src/actor/player/: action.rs  camera.rs  mod.rs  movement.rs  targeting.rs
src/config/: mod.rs
src/debug/: fps.rs  mod.rs  type_registering.rs  ui.rs
src/map/: mod.rs
src/network/: client.rs  lobby.rs  mod.rs  packet_communication.rs  packets.rs  remote_player.rs  renet_config.rs  server.rs
src/player/: camera.rs  mod.rs  movement.rs
src/player_ui/: mod.rs  nameplates.rs  target_tracker.rs
src/settings/: controls.rs  mod.rs
src/status_event/: Stats.rs  damage_event.rs  health_event.rs  immediate_stat_event.rs  mod.rs  stats.rs  ticking_stat_event.rs
