[package]
name = "rust-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[dependencies]
stats_and_abilities_system = {path = "crates/stats_and_abilities_system"}

bevy = { version = "0.9.1", features = ["png", "dynamic"] }
bevy_editor_pls = "0.2"
bevy_egui = "0.19"
bevy_mod_picking = "0.11"
bevy_rapier3d = "0.20"
leafwing-input-manager = "0.8"
rand = "0.8"
getset = "0.1.2"
bincode = "2.0.0-rc.2"

[profile.dev.package."*"]
opt-level = 3
