[package]
name = "rust-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[dependencies]
stats_and_abilities_system = {path = "crates/stats_and_abilities_system"}

bevy = "0.10"
bevy_editor_pls = "0.3" # dont need tbh
bevy_egui = "0.20"
bevy_rapier3d = "0.21"
leafwing-input-manager = "0.9"
rand = "0.8"
getset = "0.1.2"
bincode = "2.0.0-rc.2"

[profile.dev.package."*"]
opt-level = 3
